--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DB_CONNECTION=postgresql
-DB_DATABASE=marketplace
-DB_HOST=postgresql
+DB_DATABASE=book_search
+DB_HOST=postgresql_book
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_PORT=5432
